--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ links = "tauri-plugin-python"
 tauri = { version = "2.1.0" }
 serde = "1.0"
 thiserror = "2"
+pyo3 = "0.23.3"
+lazy_static = "1.5.0"
 
 [build-dependencies]
 tauri-plugin = { version = "2.0.2", features = ["build"] }
