--- a/permissions/default.toml
+++ b/permissions/default.toml
@@ -1,3 +1,4 @@
 [default]
 description = "Default permissions for the plugin"
-permissions = ["allow-ping"]
+permissions = ["allow-register-function", "allow-call-function", "allow-read-variable"]
+# "allow-run-python" is not enabled by default for security reasons
