--- a/examples/plain-javascript/src-tauri/Cargo.toml
+++ b/examples/plain-javascript/src-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "plain-javascript"
+name = "plain_javascript"
 version = "0.1.0"
 description = "A Tauri App"
 authors = ["Marco Mengelkoch"]
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,15 +11,15 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "plain-javascript_lib"
+name = "plain_javascript_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2.0.2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
+tauri-plugin-python = { path = "../../../" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
