--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ links = "tauri-plugin-python"
 tauri = { version = "2.1.0" }
 serde = "1.0"
 thiserror = "2"
-pyo3 = "0.23.3"
+pyo3 = { version = "0.23.3", features=["auto-initialize"] }
 lazy_static = "1.5.0"
 
 [build-dependencies]
