--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ links = "tauri-plugin-python"
 tauri = { version = "2.1.0" }
 serde = "1.0"
 thiserror = "2"
-pyo3 = { version = "0.23.3", features=["auto-initialize"] }
+pyo3 = { version = "0.23.3", features=["auto-initialize", "abi3-py39", "generate-import-lib"] }
 lazy_static = "1.5.0"
 
 [build-dependencies]
 tauri-plugin = { version = "2.0.2", features = ["build"] }
+# pyo3-build-config = "^0.23.3"
