--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tauri-plugin-python-api",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "author": "Marco Mengelkoch",
-  "description": "",
+  "description": "Javascript package for tauri 2 python plugin.",
   "type": "module",
   "types": "./dist-js/index.d.ts",
   "main": "./dist-js/index.cjs",
@@ -21,6 +21,15 @@
     "build": "rollup -c",
     "prepublishOnly": "pnpm build",
     "pretest": "pnpm build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marcomq/tauri-plugin-python.git"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/marcomq/tauri-plugin-python#readme",
+  "bugs": {
+    "url": "https://github.com/marcomq/tauri-plugin-python/issues"
   },
   "dependencies": {
     "@tauri-apps/api": ">=2.0.0-beta.6"
