--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ tauri = { version = "2" }
 serde = { version = "1", features = ["derive"] }
 thiserror = "2"
 lazy_static = "1.5.0"
-pyo3 = { version = "0.23.3", features=["auto-initialize", "abi3-py39", "generate-import-lib"], optional = true }
+pyo3 = { version = "0.24.1", features=["generate-import-lib"], optional = true }
+# requires: cargo install --git https://github.com/ntamas/PyOxidizer.git pyoxidizer
+pyembed = { git = "https://github.com/ntamas/PyOxidizer.git",  optional = true }
 rustpython-pylib = { version = "0.4.0" }
 rustpython-stdlib = { version = "0.4.0", features = ["threading"] }
 rustpython-vm = { version = "0.4.0", features = [
@@ -32,7 +34,8 @@ dunce = "1.0.5"
 tauri-plugin = { version = "2", features = ["build"] }
 
 [features]
-venv = []
 default = ["venv"] # auto load src-python/.venv
 # default = ["venv", "pyo3"] # enable to use pyo3 instead of rustpython
-pyo3 = ["dep:pyo3"]
+venv = []
+pyembed = ["dep:pyembed", "dep:pyo3"] # automatically includes pyo3
+pyo3 = ["dep:pyo3"]  
