--- a/examples/plain-javascript/src-tauri/Cargo.toml
+++ b/examples/plain-javascript/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ tauri-build = { version = "2.0.2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
-tauri-plugin-python = { path = "../../../" }
+tauri-plugin-python = { path = "../../../", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
