--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,14 @@
 name: 'build'
 
-# on:
-#  push:
-#    branches:
-#      - release
+# You can also just use this file to build your tauri app via github action
+# Just remove the `working-directory` line below and put it in your root folder 
+
 on: workflow_dispatch
 
 # This workflow will trigger on each push to the `release` branch to create or update a GitHub release, build your app, and upload the artifacts to the release.
 
 jobs:
-  publish-tauri:
+  build-tauri:
     permissions:
       contents: write
     strategy:
@@ -49,7 +48,10 @@ jobs:
         # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
 
       - name: install frontend dependencies
+        ### !!!! ----------
+        # Remove this here, if you want to build a local tauri app
         working-directory: ./examples/plain-javascript
+        ### !!!! ----------
         run: yarn install # change this to npm, pnpm or bun depending on which one you use.
 
       - uses: tauri-apps/tauri-action@v0
