--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ tauri = { version = "2" }
 serde = { version = "1", features = ["derive"] }
 thiserror = "2"
 lazy_static = "1.5.0"
-pyo3 = { version = "0.23.3", features=["auto-initialize", "abi3-py39", "generate-import-lib"], optional = true }
+pyo3 = { version = "0.23.3", features=["auto-initialize", "generate-import-lib"], optional = true }
 rustpython-pylib = { version = "0.4.0" }
 rustpython-stdlib = { version = "0.4.0", features = ["threading"] }
 rustpython-vm = { version = "0.4.0", features = [
